log
Thu 04 May 2023 04:35:05 PM UTC: 
 tests:  0|5
total_score: 0/70
68409ea
Thu 04 May 2023 04:38:18 PM UTC: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:61:17: error: unknown type name ‘node’; did you mean ‘Node’?
   61 |                 node *adyacente=copy(n);
      |                 ^~~~
      |                 Node
sudoku.c:61:33: error: initialization of ‘int *’ from incompatible pointer type ‘Node *’ [-Werror=incompatible-pointer-types]
   61 |                 node *adyacente=copy(n);
      |                                 ^~~~
sudoku.c:62:26: error: request for member ‘sudo’ in something not a structure or union
   62 |                 adyacente->sudo[i][j]=num;
      |                          ^~
sudoku.c:70:12: error: returning ‘int’ from a function with return type ‘List *’ makes pointer from integer without a cast [-Werror=int-conversion]
   70 |     return 1;
      |            ^
cc1: all warnings being treated as errors
Compilation failed
d50042d
Thu 04 May 2023 04:38:25 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:70:12: error: returning ‘int’ from a function with return type ‘List *’ makes pointer from integer without a cast [-Werror=int-conversion]
   70 |     return 1;
      |            ^
cc1: all warnings being treated as errors
Compilation failed
13e681e
Thu 04 May 2023 04:38:44 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
e21079d
Thu 04 May 2023 04:39:22 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
5fa7051
Thu 04 May 2023 04:39:33 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
9f8a48f
Thu 04 May 2023 04:57:38 PM UTC: 
 sudoku.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
825cca1
Thu 04 May 2023 04:58:26 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
05ef0d5
Thu 04 May 2023 04:58:38 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
99a27e2
Thu 04 May 2023 04:58:42 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
16a6bec
Thu 04 May 2023 05:21:29 PM UTC: 
 sudoku.c | 27 ++++++++++++---------------
 1 file changed, 12 insertions(+), 15 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:55:14: error: ‘filas’ undeclared (first use in this function); did you mean ‘fila’?
   55 |           if(filas[num1]==0)
      |              ^~~~~
      |              fila
sudoku.c:55:14: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:50:9: error: unused variable ‘colum’ [-Werror=unused-variable]
   50 |     int colum[10]={0,0,0,0,0,0,0,0,0,0};
      |         ^~~~~
sudoku.c:49:9: error: unused variable ‘fila’ [-Werror=unused-variable]
   49 |     int fila[10]={0,0,0,0,0,0,0,0,0,0};
      |         ^~~~
sudoku.c:47:13: error: unused variable ‘num2’ [-Werror=unused-variable]
   47 |   int num1, num2;
      |             ^~~~
cc1: all warnings being treated as errors
Compilation failed
fb9070b
Thu 04 May 2023 05:21:37 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:50:9: error: unused variable ‘colum’ [-Werror=unused-variable]
   50 |     int colum[10]={0,0,0,0,0,0,0,0,0,0};
      |         ^~~~~
sudoku.c:47:13: error: unused variable ‘num2’ [-Werror=unused-variable]
   47 |   int num1, num2;
      |             ^~~~
cc1: all warnings being treated as errors
Compilation failed
b1e81d5
Thu 04 May 2023 05:21:52 PM UTC: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:48:7: error: unused variable ‘num2’ [-Werror=unused-variable]
   48 |   int num2;
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
b65ee8e
Thu 04 May 2023 05:22:00 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
ef88f89
Thu 04 May 2023 05:23:37 PM UTC: 
 sudoku.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
dc705ec
Thu 04 May 2023 05:27:03 PM UTC: 
 sudoku.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
test.c: In function ‘is_valid’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:262:1: error: expected declaration or statement at end of input
test.c:262: error: control reaches end of non-void function [-Werror=return-type]
  262 | }
      | 
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
801c72b
Thu 04 May 2023 05:27:27 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c: In function ‘is_valid’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:262: error: control reaches end of non-void function [-Werror=return-type]
  262 | }
      | 
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9120c13
Thu 04 May 2023 05:27:39 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|3
total_score: 35/70
032bc37
Thu 04 May 2023 05:32:20 PM UTC: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  2|4
total_score: 15/70
edd334c
